--- a/hello_world/static/index.html
+++ b/hello_world/static/index.html
@@ -3,13 +3,9 @@
 <html>
 <head>
     <meta charset="UTF-8">
-    <title>WITOJCIE SWIECIE !</title>
+    <title>IMIONA</title>
 </head>
 <body>
-    Super swiat wita
-
-    <script>
-        console.log("Nasz pierwszy skrypt!");
-    </script>
+    <a href="https://google.com/search?q=imiona%20slawnych%20ludzi">Znajdz imiona ludzi</a>
 </body>
 </html>
